<resources>
    <string name="app_name" translatable="false">Seymen Travel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="seymen_travel" translatable="false">Seymen Travel</string>

    <string name="txt_custom_string"><font color='#292C3D'><br>Are you ready to</br></font> <font color='#ff4760'>\tTravel?</font>
    </string>

    <string name="let_s_go">Let\'s Go!</string>
    <string name="where_s_your_next_destination">Where’s your next destination?</string>
    <string name="flights">Flights</string>
    <string name="hotels">Hotels</string>
    <string name="cars">Cars</string>
    <string name="taxi">Taxi</string>
    <string name="all">All</string>
    <string name="transportation">Transportation</string>
    <string name="deals">Deals</string>
    <string name="search">Search</string>
    <string name="trip_plan">Trip Plan</string>
    <string name="where_next">Where next?</string>
    <string name="trips">Trips</string>
    <string name="bookmark">Bookmark</string>
    <string name="guide">Guide</string>
    <string name="positive_button_ok">Ok</string>
    <string name="error">Error</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="search_guide_text">A country, a city, a place... or anything</string>
    <string name="tst_connct">Lütfen internet bağlantınızı kontrol ediniz! Uygulama kapatılıyor.</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="result">Result</string>
    <string name="see_all">See All</string>
    <string name="no_result">Sorry! No results found</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="finish_date">Finish date</string>
    <string name="start_date">Start date</string>
    <string name="save">Save</string>
    <string name="add_trip">Add Trip</string>
    <string name="might_need_this">MIGHT NEED THIS</string>
    <string name="nearby_attaractions">NEARBY ATTARACTIONS</string>
    <string name="top_destinations">TOP DESTINATIONS</string>
    <string name="top_pick_articles">TOP-PICK ARTICLES</string>
    <string name="be_sure_enter_info">Be sure to enter the required information!</string>
    <string name="choose_first_location">Choose the location first pls</string>
    <string name="press_again_exit">Press again to exit the application.</string>
</resources>