<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/layout_background"
                tools:context=".presentation.search.SearchFragment">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView"
                    android:text="@string/search"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/title_style" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtxSearch"
                    android:layout_width="0dp"
                    android:imeOptions="actionSearch"
                    android:inputType="text"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_13sdp"
                    android:layout_marginTop="@dimen/_16sdp"
                    android:layout_marginEnd="@dimen/_13sdp"
                    android:background="@drawable/searchview_background"
                    android:hint="@string/where_next"
                    android:drawableEnd="@drawable/search_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView5"
                    android:text="@string/top_destinations"
                    android:layout_marginTop="@dimen/_12sdp"
                    app:layout_constraintStart_toStartOf="@+id/edtxSearch"
                    app:layout_constraintTop_toBottomOf="@+id/edtxSearch"
                    style="@style/txt_search_title" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcyclvTopDestination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView5" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textView6"
                    android:text="@string/nearby_attaractions"
                    app:layout_constraintStart_toStartOf="@+id/edtxSearch"
                    app:layout_constraintTop_toBottomOf="@+id/rcyclvTopDestination"
                    style="@style/txt_search_title" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcyclvNearbyAttr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_60sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView6" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</layout>